# Indecimal-Rag

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
rag_pipeline/: embedding.py  ingestion_chunking.py  rag_generation.py  retrieval.py
rag_pipeline/data/processed/: chunks.json  embeddings.npy  faiss.index
